# lean-zip

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCH.md  GateProbe.lean  KernelBench.lean  LICENSE  LadderSweep.lean  PLAN.md  PROGRESS.md  PerfProbe.lean  PerfSpike.lean  ProfileMain.lean  README.md  SECURITY_INVENTORY.md  SESSION.md  ScratchMin.lean  ScratchTab.lean  ScratchV2.lean  ScratchV3.lean  ScratchV4.lean  Test.lean  VERIFICATION.md  Zip.lean  ZipBench.lean  ZipBenchReport.lean  ZipForStd.lean  ZipFuzzHandleRead.lean  ZipFuzzInflate.lean  ZipL1Attrib.lean  ZipMidSweep.lean  ZipRatioSweep.lean  ZipTest.lean  ZipTreeFreeBench.lean  ZipTreeFreeDecodeBench.lean  ZipWideStoreBench.lean  Zlib.lean  blog.md  coordination  go  (+7 more)
.claude/: CLAUDE.md  settings.json
.pod/: .gitignore  config.toml
Zip/: Archive.lean  Basic.lean  Binary.lean  Checksum.lean  Gzip.lean  Handle.lean  Libdeflate.lean  MinizOxide.lean  RawDeflate.lean  Tar.lean  Zopfli.lean  Zstd.lean
ZipForStd/: Array.lean  ByteArray.lean  List.lean  Nat.lean  README.md
ZipTest/: Archive.lean  Benchmark.lean  Binary.lean  BoundedReadTest.lean  Checksum.lean  CompressFixtures.lean  ExtendWithin.lean  FseNative.lean  FuzzCompress.lean  FuzzHandleRead.lean  FuzzInflate.lean  Gzip.lean  Helpers.lean  HtMatch.lean  InflateFast.lean  InflateTable.lean  Libdeflate.lean  MinizOxide.lean  NativeChecksum.lean  NativeCompressBench.lean  NativeDeflate.lean  NativeGzip.lean  NativeInflate.lean  NativeIntegration.lean  RawDeflate.lean  (+21 more)
bench/rust/miniz_oxide_shim/: Cargo.toml
bench/rust/miniz_oxide_shim/src/: lib.rs
(+1570 files in other folders)
