[package]
name = "miniz_oxide_shim"
version = "0.1.0"
edition = "2021"
publish = false
description = "C-ABI shim around miniz_oxide for the lean-zip Track D comparator (RFC 1951 raw DEFLATE)."

[lib]
crate-type = ["staticlib"]

# Honest rust side of the end-to-end CLI comparison (bench/whole_tar_l6.sh's
# `end_to_end` section): read a file, raw-DEFLATE compress it with the same
# `compress_to_vec(&data, level)` codec the staticlib shim uses, print the
# compressed length. `cargo build --release` emits target/release/miniz-compress-file.
[[bin]]
name = "miniz-compress-file"
path = "src/bin/compress_file.rs"

[dependencies]
miniz_oxide = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
